issue-21 added new table and title

--- a/index.htm
+++ b/index.htm
@@ -33,16 +33,27 @@ $(document).ready(function(){
 });
 </script>
 
+<style type="text/css">
+.auto-style1 {
+	color: #000080;
+	font-size: large;
+}
+</style>
+
 </head>
 
 <body>
 <div align="center">
+<table  style="width: 322pt">
+<tr>
+<td class="auto-style1">
+<strong>Select the Pet Owner on the left <br />
+and match it with the pet on the right </strong>
+</td>
+</tr>
+<tr>
+<td>
 <table style="width: 320pt">
-	<tr>
-		<td style="width: 130pt;height:130pt">&nbsp;</td>
-		<td style="width: 60pt">&nbsp;</td>
-		<td style="width: 130pt;height:130pt">&nbsp;</td>
-	</tr>
 	<tr>
 		<td><div align="center" id="1" class="skey" style="width: 130pt;height:130pt" valign="middle">
 			<br />
@@ -71,6 +82,11 @@ $(document).ready(function(){
 			<img src="pet3.png" /></div></td>
 	</tr>
 </table>
+</td>
+</tr>
+</table>
+
+
 <input type="hidden" id="selval" name="selval" value="0" />
 
 
