issue-21 added border to external table

--- a/index.htm
+++ b/index.htm
@@ -38,13 +38,17 @@ $(document).ready(function(){
 	color: #000080;
 	font-size: large;
 }
+.border {
+    border-style: solid;
+    border-color: #FF0000;
+}
 </style>
 
 </head>
 
 <body>
 <div align="center">
-<table  style="width: 322pt">
+<table  style="width: 322pt" class="border">
 <tr>
 <td class="auto-style1">
 <strong>Select the Pet Owner on the left <br />
